cc: Only use single quad pass optimization when quad rect matches pass rect

GLRenderer::CanPassBeDrawnDirectly checks if a pass' only quad is
positioned at (0, 0) in pass space, but this doesn't guarantee that
the quad will be positioned at the top left corner of the pass' texture,
since the pass' own texture isn't necessarily positioned at (0, 0) in pass
space. In this situation, using the quad's texture in place of the pass's
texture results in incorrect positioning of the quad's contents. To fix this,
this CL adds a check that the quad rect matches the pass' output rect.

BUG=671773
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2558393002
Cr-Commit-Position: refs/heads/master@{#437402}

Former-commit-id: 7faf8fc181b5d98c6007495a8944ff0be3aeeb90